--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        background: url("img2/bg.jpg");
+        background: url("img/bg.jpg");
     }
     .left {
         position: absolute;
@@ -129,10 +129,11 @@
 </style>
 
 <body>
+    
     <header class="header">
         <!-- left box for logo -->
         <div class="left">
-            <img src="img2/logo.png" alt="logo">
+            <img src="https://img.freepik.com/free-vector/mobile-login-concept-illustration_114360-135.jpg?w=740&t=st=1710830789~exp=1710831389~hmac=680a385147c40821070391646298d5c98f0ec85cf354b305f0d1053650ff3b51" alt="logo">
         </div>
         <!-- mid box for navbar -->
         <div class="mid">
